--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -158,3 +158,8 @@
 .termly-plans-overview-section-div {
 
 }
+
+.curriculumLevelEarlyFilterSection{
+    margin-top: 2rem;
+    margin-bottom: 3.5rem;
+}
