--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
@@ -1,7 +1,7 @@
 @import models.timetoteach.TimeToTeachUserId
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, groupDetails: duplicate.model.Group, subject: String, maybeEsOsAndBenchmarks: Option[duplicate.model.esandos.EsAndOsPlusBenchmarksForCurriculumAreaAndLevel])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, groupDetails: duplicate.model.Group, curriculumArea: String, maybeEsOsAndBenchmarks: Option[duplicate.model.esandos.EsAndOsPlusBenchmarksForCurriculumAreaAndLevel])
 
-@timetoteachAppMain(handler, s"${classDetails.className.name} Termly Plans - $subject - ${groupDetails.groupName.name.capitalize}",
+@timetoteachAppMain(handler, s"${classDetails.className.name} Termly Plans - $curriculumArea - ${groupDetails.groupName.name.capitalize}",
     userPictureUri, userFirstName, userFamilyName) {
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
@@ -71,7 +71,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-4">
                         <label for="inputSubject">Subject</label>
-                        <input type="text" class="form-control" id="inputSubject" placeholder="@subject" disabled="true">
+                        <input type="text" class="form-control" id="inputSubject" placeholder="@curriculumArea" disabled="true">
                     </div>
                     <div class="form-group col-md-4">
                         <label for="inputGroup">Group</label>
@@ -169,8 +169,8 @@
             <div class="alert alert-warning" role="alert">
                 No Es & Os or Benchmarks defined for level='@{
                 groupDetails.groupLevel.value.replace("Level", "")
-            }' & subject='@{
-                subject
+            }' & curriculum area='@{
+                curriculumArea
             }'
             </div>
         }
@@ -192,7 +192,7 @@
 
     <script>
             localStorage.setItem("classId", "@classDetails.id.id");
-            localStorage.setItem("subject", "@subject");
+            localStorage.setItem("subject", "@curriculumArea");
             localStorage.setItem("groupId", "@groupDetails.groupId.id");
             localStorage.setItem("schoolId", "@classDetails.schoolDetails.id");
             localStorage.setItem("tttUserId", "@tttUserId.value");
