--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -163,3 +163,7 @@
     margin-top: 2rem;
     margin-bottom: 3.5rem;
 }
+
+.termly-plans-es-and-os-level-section-header {
+    margin-top: 2rem;
+}
