--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtClassLevel.scala.html
@@ -77,23 +77,23 @@
                 Select the curriculum levels you wish to plan for</h5>
             <div class="row curriculumLevelEarlyFilterSection">
                 <div class="col">
-                    <button id="curriculumLevelEarlyFilterButton" type="button" class="btn btn-outline-dark btn-sm btn-block">
+                    <button id="curriculumLevelEarlyFilterButton" type="button" class="btn btn-outline-info btn-sm btn-block">
                         Early</button>
                 </div>
                 <div class="col">
-                    <button id="curriculumLevelFirstFilterButton" type="button" class="btn btn-outline-dark  btn-sm btn-block">
+                    <button id="curriculumLevelFirstFilterButton" type="button" class="btn btn-outline-info  btn-sm btn-block">
                         First</button>
                 </div>
                 <div class="col">
-                    <button id="curriculumLevelSecondFilterButton" type="button" class="btn btn-outline-dark  btn-sm btn-block">
+                    <button id="curriculumLevelSecondFilterButton" type="button" class="btn btn-outline-info  btn-sm btn-block">
                         Second</button>
                 </div>
                 <div class="col">
-                    <button id="curriculumLevelThirdFilterButton" type="button" class="btn btn-outline-dark  btn-sm btn-block">
+                    <button id="curriculumLevelThirdFilterButton" type="button" class="btn btn-outline-info  btn-sm btn-block">
                         Third</button>
                 </div>
                 <div class="col">
-                    <button id="curriculumLevelFourthFilterButton" type="button" class="btn btn-outline-dark  btn-sm btn-block">
+                    <button id="curriculumLevelFourthFilterButton" type="button" class="btn btn-outline-info  btn-sm btn-block">
                         Fourth</button>
                 </div>
             </div>
@@ -206,6 +206,12 @@
             </div>
             }
 
+        <div id="alert-div" class="text-center">
+            <div id = "alertIfAllFilterButtonsAreOffWarning" class = "alert alert-warning" role = "alert">
+                <p>No Es & Os or Benchmarks to show because no curriculum levels have been selected.</p>
+                <p>Please select at least one curriculum level from filters above.</p>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-md-8"></div>
