--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -168,22 +168,22 @@
     margin-top: 2rem;
 }
 
-#termly-plans-es-and-os-level-section-div-EarlyLevel {
+.termly-plans-es-and-os-level-section-div-EarlyLevel {
     display: none;
 }
 
-#termly-plans-es-and-os-level-section-div-FirstLevel {
+.termly-plans-es-and-os-level-section-div-FirstLevel {
     display: none;
 }
 
-#termly-plans-es-and-os-level-section-div-SecondLevel {
+.termly-plans-es-and-os-level-section-div-SecondLevel {
     display: none;
 }
 
-#termly-plans-es-and-os-level-section-div-ThirdLevel {
+.termly-plans-es-and-os-level-section-div-ThirdLevel {
     display: none;
 }
 
-#termly-plans-es-and-os-level-section-div-FourthLevel {
+.termly-plans-es-and-os-level-section-div-FourthLevel {
     display: none;
 }
