--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
@@ -46,21 +46,25 @@
                             <a class="btn btn-outline-primary" role="button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()">
                                 Termly Plans Home</a>
                         </li>
-                        <li class="nav-item manage-class-nav-item-on-left">
+                    </ul>
+
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item manage-class-nav-item-on-right">
                             <a class="btn btn-info" role="button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansForClass(classDetails.id.id)">
                                 @classDetails.className.name Termly Plans</a>
                         </li>
-                        <li class="nav-item manage-class-nav-item-on-left">
+                        <li class="nav-item manage-class-nav-item-on-right">
                             <a class="btn btn-info" role="button"
                             href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
                                 Manage @classDetails.className.name</a>
                         </li>
-                        <li class="nav-item manage-class-nav-item-on-left">
+                        <li class="nav-item manage-class-nav-item-rightmost">
                             <a id="manage-class-goto-timetable" class="btn btn-info" role="button"
                             href="@controllers.planning.classtimetable.routes.ClassTimetableController.classTimetable(classDetails.id.id)">
                                 Class Timetable</a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </div>
