--- a/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
@@ -44,12 +44,15 @@
                             <a class="btn btn-outline-primary" role="button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()">
                                 Termly Plans Home</a>
                         </li>
-                        <li class="nav-item manage-class-nav-item-on-left">
+                    </ul>
+
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item manage-class-nav-item-on-right">
                             <a class="btn btn-info" role="button"
                             href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
                                 Manage @classDetails.className.name</a>
                         </li>
-                        <li class="nav-item manage-class-nav-item-on-left">
+                        <li class="nav-item manage-class-nav-item-rightmost">
                             <a id="manage-class-goto-timetable" class="btn btn-info" role="button"
                             href="@controllers.planning.classtimetable.routes.ClassTimetableController.classTimetable(classDetails.id.id)">
                                 Class Timetable</a>
@@ -74,20 +77,22 @@
                         <div class="row">
                         @for(area <- planningAreas) {
                             @if(area.isCompositeValue && area.niceHeaderValueIfPresent().getOrElse("NONE") == "Expressive Arts") {
-                                <div class="col">
-                                    <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
-                                            <input name="@area.value.toString" type="hidden" value="Off">
-                                            <span class="custom-control-indicator"></span>
-                                            @if(area.isCompositeValue) {
-                                                <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
-                                            } else {
-                                                <span class="custom-control-description">@area.niceValue</span>
-                                            }
-                                        </label>
+                                @if(area.niceSpecificValueIfPresent().getOrElse(area.niceValue()) != "Dance") {
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <label class="custom-control custom-checkbox">
+                                                <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
+                                                <input name="@area.value.toString" type="hidden" value="Off">
+                                                <span class="custom-control-indicator"></span>
+                                                @if(area.isCompositeValue) {
+                                                    <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
+                                                } else {
+                                                    <span class="custom-control-description">@area.niceValue</span>
+                                                }
+                                            </label>
+                                        </div>
                                     </div>
-                                </div>
+                                }
                             }
                         }
                         </div>
