--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
@@ -1,8 +1,9 @@
 @import models.timetoteach.TimeToTeachUserId
 @import models.timetoteach.planning.CurriculumAreaTermlyPlan
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, curriculumArea: String, subjectTermlyPlan: CurriculumAreaTermlyPlan, esAndOsCodeToDetailMap: Map[String, duplicate.model.esandos.EandO])
+@import models.timetoteach.planning.ScottishCurriculumPlanningAreaWrapper
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, curriculumArea: ScottishCurriculumPlanningAreaWrapper, subjectTermlyPlan: CurriculumAreaTermlyPlan, esAndOsCodeToDetailMap: Map[String, duplicate.model.esandos.EandO])
 
-@timetoteachAppMain(handler, s"${classDetails.className.name} Termly Plans - $curriculumArea - Class Level",
+@timetoteachAppMain(handler, s"${classDetails.className.name} Termly Plans - ${curriculumArea.niceSpecificValueIfPresent().getOrElse(curriculumArea.niceValue())} - Class Level",
     userPictureUri, userFirstName, userFamilyName) {
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
@@ -47,20 +48,6 @@
                             <a class="btn btn-outline-primary" role="button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()">
                                 Termly Plans Home</a>
                         </li>
-                        <li class="nav-item manage-class-nav-item-on-left">
-                            <a class="btn btn-info" role="button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansForClass(classDetails.id.id)">
-                                @classDetails.className.name Termly Plans</a>
-                        </li>
-                        <li class="nav-item manage-class-nav-item-on-left">
-                            <a class="btn btn-info" role="button"
-                            href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
-                                Manage @classDetails.className.name</a>
-                        </li>
-                        <li class="nav-item manage-class-nav-item-on-left">
-                            <a id="manage-class-goto-timetable" class="btn btn-info" role="button"
-                            href="@controllers.planning.classtimetable.routes.ClassTimetableController.classTimetable(classDetails.id.id)">
-                                Class Timetable</a>
-                        </li>
                     </ul>
 
                     <ul class="nav justify-content-end">
@@ -81,8 +68,8 @@
                         <li class="nav-item manage-class-nav-item-rightmost">
                             <a id="termly-plans-edit" role="button" class="btn btn-primary"
                             href="#">
-                            @*href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansClassLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">*@
-                                Re-Select Es&Os/Benchmarks</a>
+                                @*href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansClassLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">*@
+                                    Re-Select Es&Os/Benchmarks</a>
                         </li>
                     </ul>
                 </div>
@@ -93,18 +80,16 @@
         <div class="termly-plans-overview-section">
             <form>
                 <div class="form-row">
+                    <div class="form-group col-md-4"></div>
                     <div class="form-group col-md-4">
-                        <label for="inputSubject">Subject</label>
-                        <input type="text" class="form-control" id="inputSubject" placeholder="@curriculumArea" disabled="true">
+                        <div class="text-center">
+                            <label for="classLevelInputCurriculumArea">Curriculum Area</label>
+                            <input type="text" class="form-control" id="classLevelInputCurriculumArea" placeholder="@{
+                                curriculumArea.niceSpecificValueIfPresent().getOrElse(curriculumArea.niceValue())
+                            }" disabled="true">
+                        </div>
                     </div>
-                    <div class="form-group col-md-4">
-                        <label for="inputGroup">Group</label>
-                        @*<input type="text" class="form-control" id="inputGroup" placeholder="@groupDetails.groupName.name.capitalize" disabled="true">*@
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="inputLevel">Curriculum Level</label>
-                        @*<input type="text" class="form-control" id="inputLevel" placeholder="@groupDetails.groupLevel.value.replace("Level", "")" disabled="true">*@
-                    </div>
+                    <div class="form-group col-md-4"></div>
                 </div>
             </form>
 
